Changelog
=========

4.2-dev - (unreleased)
----------------------
* Bug fix: Fix test if context is annotable
  [voineali #4741]

4.1 - (2011-11-18)
------------------
* Rerelease broken egg

4.0 - (2011-11-18)
------------------
* Feature: Added a way to override default Archetypes location field/widget
  by just adding eea.geotags.default within zcml directive in your buildout
  [voineali #4694]
* Bug fix: Fixed geotags dialog on Add form when portal_factory is enabled
  [voineali #4696]
* Bug fix: Fixed search results description and tags when searching with geonames.org
  [voineali #4525]
* Feature: Updated geonames API usage according with
  this specifications: http://www.geonames.org/export/web-services.html
  Please update the 'geonames_key' in portal_properties/geographical_properties
  with your geonames username
  [voineali #4525]
* Feature: Use geonames.org service for free search, then fallback to Google service
  [voineali #4525]
* Feature: Geotag widget usability, add tag in one click
  [voineali #4429]
* Bugfix: Fixed IE js error on google maps, we don't move the navigation widget to the right of the map on preview
  [szabozo #4542]
* Bugfix: Fixed missing google map api
  [szabozo0 #4428]
* Cleanup: Fixed all pylint, pyflakes warnings
  [voineali #4236]
* Feature: Added upgrade steps
  [voineali #4392]
* Feature: Plone 4.0.4 compatible release
  [ghicaale #4236]

1.3 - (2011-04-20)
------------------
 * Bug fix: fix widget bugs
   [szabozo0 #4260]

1.2 - (2011-04-19)
------------------
* Bug fix: fix import errors
  [szabozo0 #4260]
* Feature: created formlib version of the widget
  [szabozo0 #4260]
* Cleanup: of most pylint violations
  [ichimdav #4140]
* Cleanup: of pyflakes warnings
  [ichimdav #4141]
* Bug fix: Remove geotags suggestion duplicates
  [voineali #3357]
* Change: Moved alchemy auto-discover code to eea.alchemy as it's not only
  about geotags, it will also discover temporal coverage and keywords
  [voineali #3357]
